--- a/happiness/css/task2.css
+++ b/happiness/css/task2.css
@@ -7,7 +7,7 @@ body{
     background-color: greenyellow;
 }
 
-#contain{
+#main_cont{
     color:rgba(7, 114, 7, 0.644);
     background-color: thistle;
     max-width: 300px;
