done with my mobile responsiveness on my assignmt

--- a/endless/css/assignment1.css
+++ b/endless/css/assignment1.css
@@ -50,6 +50,17 @@ aside a:hover{
     color: lime;
     
 }
+
+.fa-bars{
+    color: black;
+    background-color: yellow;
+    border-radius: 50px;
+    padding: 8px;
+    font-size: 20px;
+    float: right;
+    margin:13px 30px 5px;
+    display: none;
+}
 #right a{
     background-color: lime;
     color: black;
@@ -145,5 +156,29 @@ aside a:hover{
     background-position: center; 
     width: auto;
     min-height: 500px;
-   
+}
+
+@media screen and (max-width:767px){
+   .fa-bars{
+       display: block;
+   }
+   #center a{
+       display: block;
+   }
+ #center{
+       display:none;
+       text-align: left;
+       margin-left: 25px;
+    }
+    
+    header{
+        padding-bottom: 5px;
+    }
+    #center a:hover{
+        background-color: yellow;
+        color: black;
+        transition: all linear 0.3s;
+        -webkit-transition: all linear 0.3s;
+        border-radius: 50px;
+    }
 }
