--- a/happiness/css/task3.css
+++ b/happiness/css/task3.css
@@ -4,12 +4,15 @@
 }
  #upcontain{
     width: 100%;
-     height: 70vh;
+     height: 60vh;
 }
 #colordiv{
+    display:flex;
     width: 100%;
-    height: 70vh;
+    height: 100%;
     background-color: rgba(4, 4, 82, 0.411);
+    flex-direction: column;
+    color: white;
 }
 #topnav{
     
@@ -35,43 +38,98 @@
     flex: 1;
     color: white;
 }
-#flexmenu :nth-child(2){
-    flex: 2;
-    font-size: 0.8rem;
-    word-spacing: 0.2rem;
+#cap{
+    background-color:rgba(202, 202, 13, 0.945);
+    color: black;
+    padding: 6px;
+    border-radius: 14px;
 }
+#flexmenu :nth-child(2){
+    flex: 3;
+    font-size: 0.9rem;
+    word-spacing: 0.2rem;
+    padding-top: 2px;
+    text-align: center;
+}
+
 #flexmenu :nth-child(3){
     text-align: right;
+    flex: 0.8;
+}
+#apply{
+    border-radius: 7px;
+    padding: 4px;
+    background-color:rgba(202, 202, 13, 0.945);
+    color: black;
 }
 #textprt{
+    flex: 4;
     text-align: center;
-    position: relative;
     color: white;
-    top: 100px;  
+    margin-top: 100px; 
 }
-#cards{
-    margin:1px auto;
-    top: 231px;
-    position: relative;
-    max-width: 800px;
-    height: 148px;
+#textprt nav{
+    width: 60%;
+    margin: 26px auto;
+    color: white;
+}
+#textprt nav a{
+    text-decoration: none;
+    padding: 5px;
     background-color: rgba(4, 4, 43, 0.842);
+    border-radius: 7px;
+} 
+#cards{
+    flex: 2;
     display: flex;
+    margin: 0 auto;
 }
-#first,#second,#third{
-    flex: 1;
-    color: white;
-    border-right: 2px solid white;
-    
+.cardflex{
+    width: 266px;
+    background-color: rgba(4, 4, 43, 0.842);
+    border-right: 4px solid rgba(255, 255, 255, 0.322);
+
 }
-#first h3{
-    margin-left: 7px;
-    margin-top: 15px;
-    word-spacing: 1.5rem;    
+#first{
+display: flex;
 }
-#first span{
-    margin-left: 7px;
+#second{
+    display: flex;
 }
 #third{
     border-right:none;
+    display: flex;
+}
+.aside1{
+    flex: 9;
+    margin:17px 0 0 14px;
+    line-height: 1.5rem;
+}
+.aside2{
+    margin: 36px 14px 0 0 ;
+    flex: 1;
+    color: rgba(202, 202, 13, 0.945);
+}
+#dwncontain{
+    text-align: center;
+    background-color: rgba(4, 4, 82, 0.075);
+}
+#dwnimg{
+    height: 260px;
+    width: 500px;
+    margin:auto;
+    box-shadow: -1px -4px 10px  rgba(4, 4, 82, 0.63);
+    margin-top: 7px;
+    border-top-left-radius: 220px;
+    border-top-right-radius:  220px;
+    background-size: cover;
+}
+
+@media screen and (max-width:750px){
+#cards{
+    display: block;
+}
+.cardflex{
+    width: 100%;
+}
 }
